<resources>
    <string name="app_name">FavoriteApp</string>
    <string name="tab_text_1">Favorite Movie</string>
    <string name="tab_text_2">Favorite TV Show</string>
    <string name="image_movie">Image Movie</string>
    <string name="tv_movie_name">Name Movie</string>
    <string name="tv_movie_release">Release</string>
    <string name="tv_movie_description">Description</string>
    <string name="image_tv_show">Image Tv Show</string>
    <string name="tv_tv_show_name">Name Tv Show</string>
    <string name="tv_tv_show_release">Release</string>
    <string name="tv_tv_show_description">Description</string>
    <string name="tv_show_image">Tv Show Image</string>
    <string name="empty_movie_favorite">Movie Favorite is Empty</string>
    <string name="empty_tvshow_favorite">TV show Favorite is Empty</string>
    <string name="txt_movie_name">Movie Name :</string>
    <string name="txt_movie_release">Release     :</string>
    <string name="txt_movie_description">Overview:</string>
    <string name="txt_tv_show_name">Tv Show Name :</string>
    <string name="txt_tv_show_release">Release     :</string>
    <string name="txt_tv_show_description">Overview:</string>
    <string name="delete">Delete</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="detail_movie">Movie Detail</string>
    <string name="tvshow_detail">TvShow Detail</string>
    <string name="item_save">Item saved to favorite</string>
    <string name="item_delete">Item favorite deleted</string>
</resources>
